[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl-report"
version = "0.1.1"
description = "A report generating system for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl-report"
repository = "https://github.com/pwwang/pyppl-report"
include = [ "pyppl-report/resources/",]
exclude = [ "pyppl-report/resources/**.pyc",]
[[tool.poetry.packages]]
include = "pyppl-report"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.0"
cmdy = "*"
pyppl = "^2.0"
panflute = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
