[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_report"
version = "0.2.0"
description = "A report generating system for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_report"
repository = "https://github.com/pwwang/pyppl_report"
include = [ "pyppl_report/resources/",]
exclude = [ "pyppl_report/resources/**.pyc",]
[[tool.poetry.packages]]
include = "pyppl_report"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.0"
cmdy = "*"
pyparam = "*"
pyppl = "^2.0"
panflute = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pyppl_report = "pyppl_report.console:main"
