[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_report"
version = "0.5.0pre1"
description = "A report generating system for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_report"
repository = "https://github.com/pwwang/pyppl_report"
include = [ "pyppl_report/resources/",]
exclude = [ "pyppl_report/resources/**.pyc",]
[[tool.poetry.packages]]
include = "pyppl_report"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10"
cmdy = "*"
pyparam = "*"
pyppl = "*"
# panflute has bug on 1.12.* to detect # cols when table header is None
panflute = "1.11.*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pyppl_report = "pyppl_report.console:main"
pyppl-report = "pyppl_report.console:main"

[tool.poetry.plugins.pyppl]
pyppl_report = "pyppl_report"
